--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <app-navbar></app-navbar>
-<app-hero-section></app-hero-section>
-<app-partners-banner></app-partners-banner>
-<app-course-section></app-course-section>
-<app-form-wrapper></app-form-wrapper>
+<router-outlet></router-outlet>
 <app-footer></app-footer>
