Completed routing and fetching of data for courses pages

--- a/src/app/pages/courses-page/courses-page.component.html
+++ b/src/app/pages/courses-page/courses-page.component.html
@@ -1,1 +1,4 @@
-<app-course-general></app-course-general>
+<div *ngIf="showCourseGeneral">
+  <app-course-general></app-course-general>
+</div>
+<router-outlet></router-outlet>
