--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-dark opacity-75 sticky-top" style="border-bottom: 1px solid royalblue;">
   <div class="container-fluid">
     <a class="navbar-brand text-white font-monospace" routerLink="/">
-      <img src="assets/education.svg" alt="logo" height="30">
+      <img src="/assets/education.svg" alt="logo" height="40" style="filter: invert(100%);" class="mt-2 ms-2">
     </a>
 
     <span *ngIf="email" class="text-white ms-3">Bentornato, {{ email }}</span>
@@ -33,4 +33,3 @@
     </div>
   </div>
 </nav>
-
